Fix action buttons not showing up

--- a/src/assets/scss/core/elements/_profile-preview.scss
+++ b/src/assets/scss/core/elements/_profile-preview.scss
@@ -66,9 +66,8 @@
 }
 
 .action-buttons {
-    position: absolute;
-    bottom: 5px;
-    right: 10px;
+	text-align: right;
+	padding-right: 10px;
 }
 
 .action-button {
